--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_ENABLE_REDUX_DEV_TOOLS=true
 REACT_APP_ENVIRONMENT=development
 REACT_APP_WEBSITE_DOMAIN=http://localhost:3000
+
+REACT_APP_API_URL=http://localhost:1337
