--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.0.10",
     "axios": "^1.3.2",
     "date-fns": "^2.29.3",
+    "formik": "^2.2.9",
     "notistack": "^2.0.8",
     "numeral": "^2.0.6",
     "react": "^18.2.0",
@@ -29,7 +30,8 @@
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.0.0"
   },
   "scripts": {
     "start": "craco start",
