--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,5 +18,7 @@
         "react"
     ],
     "rules": {
+        "@typescript-eslint/explicit-function-return-type": "off",
+        "@typescript-eslint/consistent-type-assertions": "off"
     }
 }
