--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            loic08/SBCdrink-app
+            loic08/sbcdrink-app
           # generate Docker tags based on the following events/attributes
           tags: |
             type=schedule
