--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,4 +18,6 @@ RUN yarn global add serve
 
 RUN yarn build
 
-ENTRYPOINT ["serve", "-s", "build", "-l", "3000"]
+EXPOSE 3000
+
+CMD ["serve", "-s", "build", "-l", "3000"]
