--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,9 +1,8 @@
-# Use root/example as user/password credentials
 version: '3.1'
 
 services:
-  app:
-    container_name: app
+  sbcdrink-app:
+    container_name: sbcdrink-app
     build:
       context: ../
       dockerfile: ./docker/Dockerfile
