fix: dockerfile development, sleep infinity

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ REACT_APP_ENABLE_REDUX_DEV_TOOLS=true
 REACT_APP_ENVIRONMENT=development
 REACT_APP_WEBSITE_DOMAIN=http://localhost:3000
 
-REACT_APP_API_URL=http://localhost:8000
+REACT_APP_API_URL=http://raspberrypi.local:8000
