--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -20,6 +20,8 @@ FROM node:20 AS production
 
 WORKDIR /app
 COPY --from=build /app/build ./build
+COPY ./docker/env.sh /docker-entrypoint.d/env.sh
+RUN chmod +x /docker-entrypoint.d/env.sh
 RUN yarn global add serve
 EXPOSE 3000
 CMD ["serve", "-s", "build", "-l", "3000"]
