fix: error build

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     build:
       context: ../
       dockerfile: ./docker/Dockerfile
-      target: development
-      # target: production
+      # target: development
+      target: production
     # image: loic08/sbcdrink-app:main
     restart: always
     ports:
